--- a/includes/_07_text.adoc
+++ b/includes/_07_text.adoc
@@ -1,11 +1,9 @@
 == Text
 
-=== Elements
+=== Plain Text
 
-=== Formatting
+=== Rich Text
 
-=== Lists
+=== Automatic Syntax Highlighting
 
-=== Alignment
-
-=== Search and Replace
+=== Searching
